5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1638_2449.log
== TEST (2019-04-15 12:30:27) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

x = ((c * e) - (b * f))/((a * e) - (b * d))
y = ((a * f) - (c * d))/((a * e) - (b * d))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) == 0):
	msg = "Nao tem solucao"
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f))/((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:30:46) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

x = ((c * e) - (b * f))/((a * e) - (b * d))
y = ((a * f) - (c * d))/((a * e) - (b * d))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) == 0):
	msg = "Nao tem solucao"
	print(msg)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.18749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c * e) - (b * f))/((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:30:56) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

x = ((c * e) - (b * f))/((a * e) - (b * d))
y = ((a * f) - (c * d))/((a * e) - (b * d))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) == 0):
	msg = "Nao tem solucao"
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f))/((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:32:45) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

x = ((c * e) - (b * f))/((a * e) - (b * d))
y = ((a * f) - (c * d))/((a * e) - (b * d))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) != 0):
	print(x)
	print(y)
else:
	msg = "Nao tem solucao"
	print(msg)
-- EXECUTION TIME:
0.153841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c * e) - (b * f))/((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:32:52) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

x = ((c * e) - (b * f))/((a * e) - (b * d))
y = ((a * f) - (c * d))/((a * e) - (b * d))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) != 0):
	print(x)
	print(y)
else:
	msg = "Nao tem solucao"
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f))/((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:33:46) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f))/((a * e) - (b * d))
	y = ((a * f) - (c * d))/((a * e) - (b * d))
	print(x)
	print(y)
else:
	msg = "Nao tem solucao"
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = (a * x) + (b * y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:33:49) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))

c = (a * x) + (b * y)
f = (d * x) + (e *y)

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f))/((a * e) - (b * d))
	y = ((a * f) - (c * d))/((a * e) - (b * d))
	print(x)
	print(y)
else:
	msg = "Nao tem solucao"
	print(msg)
-- EXECUTION TIME:
0.144905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    c = (a * x) + (b * y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:36:57) 
-- CODE:
a = float(input("Insira valor de a: "))
b = float(input("Insira valor de b: "))
c = float(input("Insira valor de c: "))
d = float(input("Insira valor de d: "))
e = float(input("Insira valor de e: "))
f = float(input("Insira valor de f: "))


if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f))/((a * e) - (b * d))
	y = ((a * f) - (c * d))/((a * e) - (b * d))
	print(x)
	print(y)
else:
	msg = "Nao tem solucao"
	print(msg)
-- EXECUTION TIME:
0.194933
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
